# bevy-game-playground

./: Cargo.toml
src/: camera.rs  floor.rs  light.rs  main.rs  player.rs  player_plugin.rs  world.rs
src/camera_plugin/: gamepad.rs  lib.rs  mod.rs  mouse.rs
src/player/: main_p.rs  mod.rs  mov.rs
src/world/: floor.rs  light.rs
